# DTblocklyGPT

./: .gitignore  GUIDE.md  README.md  package-lock.json  package.json  pyproject.toml  test_gesture.js  test_mount.patch  vite.config.mts
backend/: admin.py  endpoints.py  models.py
backend/functions/: auth.py  chat.py  fine_tuning_tasks.jsonl  fine_tuning_tasks_readme.txt  graphic.py  libraries.py  management.py  robot.py  simulate.py  task.py
backend/templates/: base.html
backend/utils/: string.py
bat/: _main.bat  cobotta_node.bat  flask_node.bat  gazebo.bat  gazebo_bridge.bat  gazebo_bridge.ps1  gazebo_node.bat  npm start.bat  npm_start.bat  poetry run start.bat  poetry_run_start.bat  polling_sicket_node.bat  polling_socket_node.bat  test.bat
django_project_conf/: settings.py
frontend/: .eslintrc  eslint.config.js  index.html  tsconfig.json
frontend/src/: index.tsx
frontend/src/components/: Loadable.tsx  MainCard.tsx  Transitions.tsx
frontend/src/components/Logo/: index.tsx
frontend/src/menu-items/: define.ts  libraries.ts
frontend/src/pages/: changePassword.tsx
frontend/src/pages/actions/: detailAction.tsx  formAction.tsx  listActions.tsx  types.ts
frontend/src/pages/chat/: chatWrapper.tsx  index.tsx  rightPanel.tsx  splittedLayout.tsx
frontend/src/pages/faq/: index.tsx
frontend/src/pages/graphic/: index.tsx  rightPanel.tsx  splittedLayout.tsx  type.ts
frontend/src/pages/homepage/: index.tsx
frontend/src/pages/locations/: detailLocation.tsx  formLocation.tsx  listLocations.tsx  types.ts
frontend/src/pages/login/: LoginForm.tsx  LoginWrapper.tsx  ResetPasswordForm.tsx  index.tsx
frontend/src/pages/multimodal/: chatWrapper.tsx  index.tsx  rightPanel.tsx  splittedLayout.tsx  utils.tsx
frontend/src/pages/myrobots/: formMyRobot.tsx  types.ts
frontend/src/routes/: MainRoutes.tsx  ProtectedRoute.tsx
frontend/src/services/: api.ts  endpoints.ts
frontend/src/themes/: index.tsx
frontend/src/utils/: blocklyParser.ts  constants.ts  messages.ts  taskAnalyzer.ts
ros2_ws/Cobotta/: Cobotta.sdf  joint_limits.yml  launch.sh  map.yaml  worldCobotta.sdf
ros2_ws/Cobotta/Operator/: model.sdf
ros2_ws/Cobotta/ReflectiveTable/: model.sdf
ros2_ws/Cobotta/old_sdf/: Cobotta.sdf  CobottaDensoLimits.sdf  CobottaDensoLimitsOptimised.sdf  CobottaDensoLimitsOptimised2.sdf  worldCobotta.sdf  worldCobottaDensoLimits.sdf  worldCobottaDensoLimitsOptimised.sdf  worldCobottaDensoLimitsOptimised2.sdf
ros2_ws/Cobotta/urdf/: comando.sh
ros2_ws/src/: README.md
ros2_ws/src/cobotta_rest_api/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
testing/: test_pick_and_place.py
(+62 files in other folders)
