[tool.poetry]
name = "DTblocklyGPT"
version = "1.0.0"
description = "Pharmaceutical Robotic and AI System for End"
authors = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
maintainers = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
readme = "README.md"
homepage = "http://localhost:3000/"
repository = "https://github.com/luigigargioni/DTblocklyGPT"
documentation = "https://github.com/luigigargioni/DTblocklyGPT#readme"
packages = [
    { include="poetry_scripts", from="./backend" },
]

[tool.poetry.scripts]
start = "backend.poetry_scripts.server:start"
collectstatic = "backend.poetry_scripts.server:collectstatic"
poetryup = "backend.poetry_scripts.server:poetryup"
migrate = "backend.poetry_scripts.server:migrate"
makemigrations = "backend.poetry_scripts.server:makemigrations"

[tool.poetry.dependencies]
django = "^5.2.3"
django-cors-headers = "^4.7.0"
django-mysql = "^4.17.0"
numpy = "^2.3.1"
openai = "^1.90.0"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
python = ">=3.11,<3.15"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
pywin32 = {version = "^311", markers = "sys_platform == 'win32'"}
rapidfuzz = "^3.13.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
poetry-plugin-up = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"